[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Metronome.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Record.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.239216, 0.239216, 0.239216, 1 )

[node name="Tabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0

[node name="Tuner" type="Tabs" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Metronome" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MetroVizualizer" type="Control" parent="Tabs/Metronome"]
margin_right = 568.0
margin_bottom = 110.0

[node name="ColorRect" type="ColorRect" parent="Tabs/Metronome/MetroVizualizer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.160784, 0.160784, 0.160784, 1 )

[node name="IncrementRow" type="Control" parent="Tabs/Metronome"]
margin_top = 110.0
margin_right = 568.0
margin_bottom = 260.0

[node name="TimeSig" type="MarginContainer" parent="Tabs/Metronome/IncrementRow"]
margin_right = 288.0
margin_bottom = 160.0
custom_constants/margin_right = 72
custom_constants/margin_top = 54
custom_constants/margin_left = 0
custom_constants/margin_bottom = 54

[node name="BoxLeft" type="Control" parent="Tabs/Metronome/IncrementRow/TimeSig"]
margin_top = 54.0
margin_right = 216.0
margin_bottom = 106.0

[node name="SigButton" type="Button" parent="Tabs/Metronome/IncrementRow/TimeSig/BoxLeft"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -27.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 35, 27 )
text = "4/4"

[node name="Ticks" type="MarginContainer" parent="Tabs/Metronome/IncrementRow"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -288.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -134.397, 92.4167 )
custom_constants/margin_right = 94
custom_constants/margin_top = 54
custom_constants/margin_left = 20
custom_constants/margin_bottom = 54

[node name="TickContainer" type="Control" parent="Tabs/Metronome/IncrementRow/Ticks"]
margin_left = 20.0
margin_top = 54.0
margin_right = 194.0
margin_bottom = 106.0

[node name="MinusButton" type="Button" parent="Tabs/Metronome/IncrementRow/Ticks/TickContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 25.4536, 30.4752 )
text = "-"

[node name="PlusButton" type="Button" parent="Tabs/Metronome/IncrementRow/Ticks/TickContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 20, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "+"

[node name="Subdiv" type="Button" parent="Tabs/Metronome/IncrementRow/Ticks/TickContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -27.0
margin_right = 35.0
margin_bottom = 27.0
text = "0"

[node name="PlayModes" type="MarginContainer" parent="Tabs/Metronome"]
anchor_right = 1.0
margin_top = 270.0
margin_bottom = 356.0
custom_constants/margin_right = 146
custom_constants/margin_left = 146

[node name="Control" type="Control" parent="Tabs/Metronome/PlayModes"]
margin_left = 146.0
margin_right = 422.0
margin_bottom = 86.0

[node name="PlayButton" type="Button" parent="Tabs/Metronome/PlayModes/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -43.0
margin_right = 130.0
margin_bottom = 43.0
text = "Play"

[node name="TapButton" type="Button" parent="Tabs/Metronome/PlayModes/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -43.0
margin_bottom = 43.0
text = "Tap"

[node name="MetroDial" type="Control" parent="Tabs/Metronome"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 356.0

[node name="ColorRect" type="ColorRect" parent="Tabs/Metronome/MetroDial"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.207843, 0.207843, 0.207843, 1 )

[node name="Record" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="HeaderTimer" type="Control" parent="Tabs/Record"]
anchor_right = 1.0
margin_bottom = 500.0

[node name="ColorRect" type="ColorRect" parent="Tabs/Record/HeaderTimer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="Timer" type="Label" parent="Tabs/Record/HeaderTimer"]
anchor_right = 0.5
margin_left = 192.0
margin_top = 42.0278
margin_right = -46.0
margin_bottom = 56.0278
rect_scale = Vector2( 4, 4 )
text = "00:00"
align = 1

[node name="Lower" type="Control" parent="Tabs/Record"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 32.0
margin_bottom = 474.0

[node name="RecordButton" type="TextureButton" parent="Tabs/Record/Lower"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )

[node name="HeaderBar" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_right = 288.0
margin_bottom = 60.0

[node name="ColorRect" type="ColorRect" parent="HeaderBar"]
margin_right = 576.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="HeaderBar"]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 53.0
margin_bottom = 7.0
text = "TunaCan"
align = 1
valign = 1

[node name="Button" type="Button" parent="HeaderBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -10.0
margin_bottom = 10.0
text = "Settings"

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0

[connection signal="pressed" from="Tabs/Metronome/IncrementRow/Ticks/TickContainer/MinusButton" to="Tabs/Metronome" method="_on_MinusButton_pressed"]
[connection signal="pressed" from="Tabs/Metronome/IncrementRow/Ticks/TickContainer/PlusButton" to="Tabs/Metronome" method="_on_Plus_pressed"]
[connection signal="pressed" from="Tabs/Record/Lower/RecordButton" to="Tabs/Record" method="_on_RecordButton_pressed"]
[connection signal="toggled" from="Tabs/Record/Lower/RecordButton" to="Tabs/Record" method="_on_TextureButton_toggled"]
